# weather_pipeline

./: README.md  dagster_cloud.yaml  pyproject.toml  setup.py
.github/workflows/: branch_deployments.yml  deploy.yml
.tmp_dagster_home_nvknkxm0/history/: runs.db
.tmp_dagster_home_nvknkxm0/history/runs/: 4d872dd4-fe6a-488a-96a4-2ccd3c50affc.db  index.db
.tmp_dagster_home_nvknkxm0/schedules/: schedules.db
.tmp_dagster_home_nvknkxm0/storage/4d872dd4-fe6a-488a-96a4-2ccd3c50affc/compute_logs/: adqgxadk.err  nhpumfpj.err  nhpumfpj.out  phxwbfyq.err
.tmp_dagster_home_nvknkxm0/storage/4d872dd4-fe6a-488a-96a4-2ccd3c50affc/prepare_dbt_project_dir/: result
weather_pipeline/: .env  .user.yml  airbyte_token_test.py  assets.py  definitions.py  profiles.yml
weather_pipeline/assets/: dbt_assets.py
weather_pipeline/dbt_project/: .gitignore  2025-05-09 11_51pm.csv  dagster_cloud.yaml  dbt_error_log.txt  dbt_project.yml  instructions.md
weather_pipeline/dbt_project/.github/workflows/: branch_deployments.yml  deploy.yml
weather_pipeline/dbt_project/dbt_weather_project/: pyproject.toml  setup.py
weather_pipeline/dbt_project/dbt_weather_project/dbt_weather_project/: assets.py  definitions.py  project.py  schedules.py
weather_pipeline/dbt_project/models/: sources.yml
weather_pipeline/dbt_project/models/marts/: schema.yml  weather_current_metrics.sql  weather_daily_snapshot.sql  weather_daily_summary.sql  weather_extremes.sql  weather_trends.sql
weather_pipeline/dbt_project/models/staging/: schema.yml  (+3 more)
weather_pipeline/dbt_project/project/: project.py
