[project]
name = "weather_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "weather_pipeline.definitions"
code_location_name = "weather_pipeline"

[tool.setuptools.packages.find]
exclude=["weather_pipeline_tests"]
